# seam_detection

./: '  .README.md.swp  .gitignore  100000  CMakeLists.txt  NOTES.md  README.md  notes_03_12_2024  notes_June_08_2023  notes_June_08_2023.md  output.pcd  package.xml  scp_test.txt  untitled.blend
analysis/: scene1.txt
blender/: plate_rect_block_c0_blndr.blend  plate_rect_block_c0_blndr.blend1  plate_rect_block_c1_30_blndr.blend  plate_rect_block_c1_blndr.blend  plate_rect_block_c2_blndr.blend
cfg/: ReconfigureTF.cfg
chatgpt/: register_clouds_teaser.py
config/: .filter_dataset.yaml.swp  aubo_i10_lidar.yaml  aubo_i10_target_source.yaml  cloudfilter_test.yaml  crg_segmentation.yaml  filter-cloud.yaml  filter_cloud.yaml  filter_cloud_ds435i.yaml  filter_dataset.yaml  get_cloud.yaml  get_rgbcloud.yaml  hue_segmentation.yaml  import_seam.yaml  main_lidar.yaml  plate_rect_block_02.yaml  plate_rect_block_02_blndr.yaml  plate_rect_block_02_dx100_rz30_blndr.yaml  plate_rect_block_02_dx_dy_rz30_blndr.yaml  plate_rect_block_c0.yaml  plate_rect_block_c0_blndr.yaml  plate_rect_block_c0_yzsplit.yaml  plate_rect_block_c1.yaml  plate_rect_block_c1_30.yaml  plate_rect_block_c1_30_blndr.yaml  plate_rect_block_c1_blndr.yaml  plate_rect_block_c2.yaml  plate_rect_block_c2_30.yaml  plate_rect_block_c2_blndr.yaml  plate_round_cylinder_01.yaml  plate_round_cylinder_02.yaml  plate_round_cylinder_c1.yaml  plate_round_tube_01.yaml  plate_round_tube_02.yaml  plate_round_tube_c0.yaml  plate_round_tube_c1.yaml  plate_round_tube_c2.yaml  plate_round_tube_c3.yaml  plate_round_tube_c4.yaml  plate_round_tube_c5.yaml  plate_round_tube_c6.yaml  (+68 more)
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  seam_detection.bash
dockerpy/: Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: .idetc_final_data.md.swp  idetc_final_data.md  idetc_notes.md  issues.md  notes.md  notes_july31_2023.md
gcode/: move_P1_P2.txt  scan_source.txt  scan_target.txt
idetc2021/: 2021-02-24-Note-22-28.xopp  Automated Weld Path Generation Using Iterative Closest Point Model.docx
idetc2023/: idetc2023-notes.md
idetc2024/: .~lock.idetc_final_data.csv#  idetc_final_data.csv
images/: cylinder_offset.pcd  cylinder_plate.pcd  lidar_scene3.pcd  test_cloud12.pcd
include/: cloudfilter.h  cloudregistration.h  cloudutils.h
launch/: .filter_dataset.launch.swp  .get_rgbcloud.launch.swp  add_two_ints.launch  aubo_i10_lidar.launch  aubo_i10_source.launch  aubo_i10_target.launch  aubo_i10_target_source.launch  aubo_i10_target_source_archive.launch  aubo_test.launch  cad_cloud.launch  cloudfilter_test.launch  cloudregistration_test.launch  cloudutils_test.launch  crg_segmentation.launch  filter-cloud.launch  filter_cloud.launch  filter_dataset.launch  get_cloud.launch  get_rgbcloud.launch  get_training.launch  hue_segmentation.launch  import_seam.launch  main_lidar.launch  plane_filter_RANSAC.launch  plane_filter_RANSAC.launch~  ransac_plane.launch  ransac_plane_multiple.launch  realsense_playback.launch  register_clouds.launch  register_target_source.launch  registration_examples.launch  rotate_cloud.launch  save_bag.launch  save_cloud.launch  save_rgbcloud.launch  scan2cloud.launch  seam-detection.launch  seam_detection.launch  seam_detection_ICP.launch  seam_detection_ICP.launch~  (+10 more)
msg/: gcodeAction.msg  pcdFileCmd.msg
pcd_images/: cad_scene3.pcd  cylinder_arch.pcd  cylinder_cube.pcd  lidar_scene_arch.pcd  plate.pcd  plate_cylinder.pcd  plate_cylinder_rotated.pcd  plate_rectangle.pcd  plate_rectangle_rotated.pcd  plate_square.pcd  plate_square_rotated.pcd  rectangle.pcd  save_cloud_test.pcd  square.pcd  table.pcd  table_plate_cylinder.pcd  target_cloud1.pcd  test_cloud11.pcd  test_cloud13.pcd  test_cloud2.pcd  test_cloud4.pcd
ply_images/: Assembly Square Tube Plate.ply  cylinder.ply  cylinder_cube.ply  cylinder_plate.ply  cylinder_plate_rotated.ply  plate_cylinder.ply  plate_cylinder_01.ply  plate_round_tube_01.ply  plate_round_tube_seam_01.ply  plate_round_tube_seam_02.ply  plate_square_tube_01.ply  plate_square_tube_02.ply  plate_square_tube_03.ply  rectangle.ply  round_tube_plate.ply  table_plate_cylinder_02.ply  table_plate_square_tube_01.PLY
ply_images_archive/: plate_cylinder_rotated.ply  square.ply  square_tube_01.ply
rviz/: aubo_i10_lidar.rviz  aubo_i10_target_source.rviz  filter-cloud.rviz  filter_cloud.rviz  filter_dataset.rviz  get_rgbcloud.rviz  get_training.rviz  hue_segmentation.rviz  import_seam.rviz  main_lidar.rviz  plane_filter_RANSAC.rviz  ransac_plane.rviz  realsense_playback.rviz  register_clouds.rviz  registration_examples..rviz  registration_examples.rviz  rotate_cloud.rviz  seam-detection.rviz  seam_detection.rviz  seam_detection_ICP.rviz  seam_detection_ICP_new.rviz  seam_detection_RANSAC.rviz  seam_detection_RANSAC_arch.rviz  segment_cloud.rviz  segment_clouds.rviz  segment_plane.rviz  teach_points.rviz  version_test.rviz
src/: .filter_dataset.cpp.swp  .hue_segmentation.cpp.swp  .reconfigure_tf.cpp.swp  add_two_ints_client.cpp  add_two_ints_server.cpp  aubo_cmd.cpp  bulk.cpp  cad_cloud.cpp  cad_cloud_bulk.cpp  cloudfilter.cpp  cloudfilter.h  cloudfilter_test.cpp  cloudregistration.cpp  cloudregistration_test.cpp  cloudutils.cpp  correspondence_grouping.cpp  crg_segmentation.cpp  ds435i_tf.cpp  filter-cloud.cpp  filter_cloud.cpp  filter_cloud_arch.cpp  filter_cloud_arch.cpp~  filter_cloud_tf.cpp  filter_cloud_tmp.cpp  filter_dataset.cpp  filter_source.cpp  filter_target.cpp  get_cloud.cpp  get_source.cpp  get_target.cpp  hue_segmentation.cpp  import_seam.cpp  plane_filter_RANSAC.cpp~  plane_filter_RANSAC_arch.cpp  (+48 more)
version_test/catkin_ws/src/aubo_control/: CMakeLists.txt  package.xml
version_test/catkin_ws/src/aubo_control/cfg/: current_filter_params.yaml  dynamic_collision_params.yaml  dynamic_model.yaml  free_drive_current_params.yaml  main_params.yaml  publish_pcd.yaml
version_test/catkin_ws/src/aubo_control/launch/: gcodeAction.launch
version_test/catkin_ws/src/aubo_control/msg/: gcodeAction.msg  gcodeStatus.msg
version_test/catkin_ws/src/aubo_control/srv/: gcodeCmdService.srv
(+554 files in other folders)
